--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ data-raw/icd/icd_codes.rds
 data-raw/icd/icd_descs.rds
 data-raw/icd/icd_subchapters.rds
 data-raw/icd/known_and_assignable_start_stop.rds
+data-raw/pccc/pccc_codes.rds
+data-raw/pccc/pccc_conditions.rds
