add files for building charlson internal data sets

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ data-raw/icd/icd_subchapters.rds
 data-raw/icd/known_and_assignable_start_stop.rds
 data-raw/pccc/pccc_codes.rds
 data-raw/pccc/pccc_conditions.rds
+data-raw/charlson/charlson_codes.rds
+data-raw/charlson/charlson_index_scores.rds
