--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ data-raw/icd/icd_subchapters.rds
 data-raw/icd/known_and_assignable_start_stop.rds
 data-raw/pccc/pccc_codes.rds
 data-raw/pccc/pccc_conditions.rds
+docs/*
