--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,6 +15,8 @@ Depends: R (>= 3.5.0)
 License: GPL-2
 Language: en-US
 Encoding: UTF-8
+URL: https://peteredewitt.com/medicalcoder/, https://github.com/dewittpe/medicalcoder/
+BugReports: https://github.com/dewittpe/medicalcoder/issues
 LazyData: true
 Suggests:
     data.table,
